k8s/storeapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storeapp
  namespace: storeapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storeapp
  template:
    metadata:
      labels:
        app: storeapp
    spec:
      containers:
        - name: storeapp
          image: storeapp:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: storeapp
  namespace: storeapp
spec:
  selector:
    app: storeapp
  ports:
    - port: 8080
      targetPort: 8080
