k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storeapp
  namespace: storeapp
spec:
  rules:
    - host: storeapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storeapp
                port:
                  number: 8080
